Updating Production URL.

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 BUNDLE_ANALYZE=false
-ENVIRONMENT_NAME=local
+ENVIRONMENT_NAME=production
 
 # This URL is the domain your app is hosted on. It is used for example, for generating the url(s) needed for the SEO properties
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/
+NEXT_PUBLIC_BASE_URL=https://tmg-contentful-demo.tkmcnally.com/
 
 # Your current space GraphQL endpoint: https://www.contentful.com/developers/docs/references/graphql/ - i.e. https://graphql.contentful.com/content/v1/spaces/{SPACE-ID}
 CONTENTFUL_GRAPHQL_ENDPOINT=${process.env.CONTENTFUL_GRAPHQL_ENDPOINT}
